# echoes_rpg

./: .gitignore  404.html  Cargo.toml  README.md  index.html  launch_game.bat  launch_game.ps1  run-gui-windows.bat  run_windows.bat  run_windows.ps1  test-server.py
.cargo/: config.toml
.github/workflows/: deploy.yml
documentation/: FIXES_SUMMARY.md  GAME_FREEZING_BUGS_SUMMARY.md  INFINITE_LOOP_FIXES.md  MOVEMENT_FREEZING_FIX.md  README.md  RESPONSIVE_LAYOUT.md  SAFETY_PATTERNS.md  VIEWPORT_VISIBILITY_MISMATCH_BUG.md  WASM_LAYOUT_FIXES.md  WASM_VERSION_FIX.md
implementation_readme/: BUILD_WINDOWS.md  CENTERING_FIX.md  CHEST_FIX_SUMMARY.md  COMBAT_TUTORIAL_FIX.md  CROSS_PLATFORM_IMPLEMENTATION.md  CROSS_PLATFORM_RUST.md  FOG_OF_WAR_SYSTEM.md  FULLSCREEN_IMPROVEMENTS.md  GUI_IMPROVEMENTS.md  INPUT_FIXES.md  INVENTORY_SYSTEM_REFACTOR.md  README.md  SOLUTION_SUMMARY.md  STATS_SYSTEM_REFACTOR.md  WINDOWS_FIXES_SUMMARY.md  WINDOWS_GUI_IMPLEMENTATION.md  WINDOWS_IMPROVEMENTS.md  WINDOWS_PERFORMANCE_TESTING.md
src/: gui.rs  lib.rs  main.rs  platform.rs  web.rs
src/character/: class.rs  mod.rs  player.rs  stats.rs
src/combat/: mod.rs
src/game/: mod.rs
src/input/: mod.rs
src/inventory/: manager.rs  mod.rs  screen.rs
src/item/: consumable.rs  equipment.rs  inventory.rs  mod.rs
src/ui/: mod.rs
src/world/: enemy.rs  fog_factory.rs  fog_of_war.rs  level.rs  mod.rs  tile.rs
test-deploy/: index.html
