[package]
name = "echoes_rpg"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform text-based RPG adventure game"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/echoes_rpg"
keywords = ["game", "rpg", "terminal", "cross-platform"]
categories = ["games"]

[dependencies]
rand = "0.8.5"
crossterm = "0.27.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dirs = "5.0.1"
anyhow = "1.0.86"
atty = "0.2.14"

# GUI dependencies for Windows version
eframe = { version = "0.27.0", optional = true }
egui = { version = "0.27.0", optional = true }
egui_extras = { version = "0.27.0", optional = true }

[features]
default = []
gui = ["eframe", "egui", "egui_extras"]

# Profile optimizations for better performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Metadata for cross-platform compatibility
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
