[package]
name = "echoes_rpg"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A cross-platform text-based RPG adventure game"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/echoes_rpg"
keywords = ["game", "rpg", "terminal", "cross-platform"]
categories = ["games"]

# Build instructions:
# - Linux/macOS terminal version: cargo build
# - Windows GUI version (GNU target): cargo build --target x86_64-pc-windows-gnu --features gui
# - Windows GUI version (release): cargo build --release --target x86_64-pc-windows-gnu --features gui
# - WASM web version: wasm-pack build --target web --out-dir pkg --no-typescript

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.86"

[features]
default = []
gui = ["eframe", "egui", "egui_extras"]

# Profile optimizations for better performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# WASM-specific build configuration
[lib]
crate-type = ["cdylib", "rlib"]

# Target-specific dependencies - Windows and Linux terminal dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27.0"
dirs = "5.0.1"
atty = "0.2.14"

# GUI dependencies for Windows version (available on all non-WASM platforms)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.eframe]
version = "0.27.0"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui]
version = "0.27.0"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui_extras]
version = "0.27.0"
optional = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Window",
    "KeyboardEvent",
    "Event",
    "EventTarget",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Metadata for cross-platform compatibility
[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "wasm32-unknown-unknown",
]

# WASM package metadata
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
